# linux_c-

./: CMakeLists.txt  README.txt  aarch64-linux-gnu.cmake  client.c  log.txt  main.cpp  server.c  x86-linux-gnu.cmake
HTTP/: CMakeLists.txt  http.cpp  http.h
KV/: CMakeLists.txt  a.out  kv.cpp  kv.h
LOG/: CLog.cpp  CLog.h  CMakeLists.txt  log.c  log.h
MYSQL/: CMakeLists.txt  mysql.c  mysql.h
SOCKET/: CMakeLists.txt  socket.c  socket.h
THREADPOOL/: CMakeLists.txt  threadpool.c  threadpool.h
THRPEADOOL/: threadpool.c  threadpool.h
build_arm/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  main
build_arm/HTTP/: Makefile  cmake_install.cmake
build_arm/KV/: Makefile  cmake_install.cmake
build_arm/LOG/: Makefile  cmake_install.cmake
build_arm/MYSQL/: Makefile  cmake_install.cmake
build_arm/SOCKET/: Makefile  cmake_install.cmake
tools/arm/mysql/docs/: INFO_BIN
tools/arm/mysql/include/: my_config.h
tools/websocket/include/: lws_config.h
tools/websocket/lib/: libwebsockets.so.19
tools/websocket/lib/cmake/libwebsockets/: LibwebsocketsTargets.cmake  libwebsockets-config-version.cmake  libwebsockets-config.cmake
tools/websocket/lib/pkgconfig/: libwebsockets.pc  libwebsockets_static.pc
tools/websocket/share/libwebsockets-test-server/: libwebsockets-test-server.key.pem  libwebsockets-test-server.pem
